--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "react-bootstrap": "2.2.2",
     "react-csv": "2.2.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "6.0.9",
     "react-paginate": "8.1.2",
+    "react-redux": "8.0.1",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.2.0",
+    "redux": "4.2.0",
+    "redux-devtools-extension": "2.13.9",
+    "redux-thunk": "2.4.1",
     "sass": "1.49.10",
     "web-vitals": "^1.1.2"
   },
@@ -45,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "v14.17.0",
+    "npm": "6.14.13"
   }
 }
